End of the TP2/3 of SYR1

--- a/SYR1/TP2/tp_liste/makefile
+++ b/SYR1/TP2/tp_liste/makefile
@@ -33,3 +33,11 @@ listing :
 clean :
 	rm obj/*.o
 	rm bin/test_list
+
+
+#
+# Test des fonctions
+#
+test_list :
+	make
+	./bin/test_list < commandes.txt
