Beginning of shell2 and better implementation of shell1

--- a/SYR2/TP2/makefile
+++ b/SYR2/TP2/makefile
@@ -6,8 +6,9 @@ shell1: shell1.c
 	gcc $(CFLAGS) -o shell1 shell1.c
 	gdb shell1
 
-all:
-	gcc $(CFLAGS) -o shell1 shell1.c
+shell2: shell2.c
+	gcc $(CFLAGS) -o shell2 shell2.c
+	gdb shell2
 
-gdb:
-	gdb shell1
+all: shell1.c
+	gcc $(CFLAGS) -o shell1 shell1.c
