Continuing the TP, adding some error messages

--- a/SYR2/TP2/makefile
+++ b/SYR2/TP2/makefile
@@ -10,5 +10,10 @@ shell2: shell2.c
 	gcc $(CFLAGS) -o shell2 shell2.c
 	gdb shell2
 
-all: shell1.c
+all: shell1.c shell2.c
 	gcc $(CFLAGS) -o shell1 shell1.c
+	gcc $(CFLAGS) -o shell2 shell2.c
+
+clean:
+	rm shell1
+	rm shell2
