Just to complete with the pipe and we're done

--- a/SYR2/TP2/makefile
+++ b/SYR2/TP2/makefile
@@ -1,19 +1,35 @@
 # Global vars
 CFLAGS = -g -Wall
+VGOPTIONS = --leak-check=full --show-leak-kinds=all --trace-children=yes
 
 # Compilations
 shell1: shell1.c
 	gcc $(CFLAGS) -o shell1 shell1.c
-	gdb shell1
 
 shell2: shell2.c
 	gcc $(CFLAGS) -o shell2 shell2.c
-	gdb shell2
 
 all: shell1.c shell2.c
 	gcc $(CFLAGS) -o shell1 shell1.c
 	gcc $(CFLAGS) -o shell2 shell2.c
 
+
+# Clean the workspace
 clean:
 	rm shell1
 	rm shell2
+	rm shell3
+
+
+# Test programs
+test_shell1:
+	gdb ./shell1
+	valgrind $(VGOPTIONS) ./shell1
+
+test_shell2:
+	gdb ./shell2
+	valgrind $(VGOPTIONS) ./shell2
+
+test_shell3:
+	gdb ./shell3
+	valgrind $(VGOPTIONS) ./shell3
