--- a/SYR2/TP2/makefile
+++ b/SYR2/TP2/makefile
@@ -9,9 +9,10 @@ shell1: shell1.c
 shell2: shell2.c
 	gcc $(CFLAGS) -o shell2 shell2.c
 
-all: shell1.c shell2.c
+all: shell1.c shell2.c shell3.c
 	gcc $(CFLAGS) -o shell1 shell1.c
 	gcc $(CFLAGS) -o shell2 shell2.c
+	gcc $(CFLAGS) -o shell3 shell3.c
 
 
 # Clean the workspace
