I give up, we got an infinite loop after the second command ...

--- a/SYR2/TP2/makefile
+++ b/SYR2/TP2/makefile
@@ -3,15 +3,18 @@ CFLAGS = -g -Wall
 VGOPTIONS = --leak-check=full --show-leak-kinds=all --trace-children=yes
 
 # Compilations
+all: shell1.c shell2.c shell3.c
+	gcc $(CFLAGS) -o shell1 shell1.c
+	gcc $(CFLAGS) -o shell2 shell2.c
+	gcc $(CFLAGS) -o shell3 shell3.c
+
 shell1: shell1.c
 	gcc $(CFLAGS) -o shell1 shell1.c
 
 shell2: shell2.c
 	gcc $(CFLAGS) -o shell2 shell2.c
 
-all: shell1.c shell2.c shell3.c
-	gcc $(CFLAGS) -o shell1 shell1.c
-	gcc $(CFLAGS) -o shell2 shell2.c
+shell3: shell3.c
 	gcc $(CFLAGS) -o shell3 shell3.c
 
 
