Moving the sources files of the first part of SYR2 Project

--- a/SYR2/Projet/Partie 1 - Lecteur Audio/makefile
+++ b/SYR2/Projet/Partie 1 - Lecteur Audio/makefile
@@ -3,8 +3,8 @@ CFLAGS = -g -Wall
 
 
 # Compilations
-all: sysprog-audio-1.5/audio.c lecteur.c
-	gcc $(CFLAGS) -c -I sysprog-audio-1.5 -o audio.o sysprog-audio-1.5/audio.c
+all: audio.c lecteur.c
+	gcc $(CFLAGS) -c -I ./ -o audio.o audio.c
 	gcc $(CFLAGS) -o lecteur lecteur.c audio.o
 
 
