--- a/SYR2/Projet/Partie 2 - Streaming Audio/makefile
+++ b/SYR2/Projet/Partie 2 - Streaming Audio/makefile
@@ -1,18 +1,18 @@
 # Global vars
 CFLAGS = -g -Wall
+SRCDIR = src/
+BINDIR = bin/
+INCDIR = includes/
 
 
 # Compilations
-all: audioserver.c audioclient.c
-	gcc $(CFLAGS)  -I ./ -o audioserver audioserver.c
-	gcc $(CFLAGS)  -I ./ -o audioclient audioclient.c
+all: $(SRCDIR)audioserver.c $(SRCDIR)audioclient.c $(SRCDIR)packethelper.c $(SRCDIR)audio.c
+	gcc $(CFLAGS)  -c -I $(INCDIR) -o $(BINDIR)audio.o $(SRCDIR)audio.c
+	gcc $(CFLAGS)  -c -I $(INCDIR) -o $(BINDIR)packethelper.o $(SRCDIR)packethelper.c
+	gcc $(CFLAGS)  -I $(INCDIR) -o $(BINDIR)audioserver $(SRCDIR)audioserver.c $(BINDIR)packethelper.o $(BINDIR)audio.o
+	gcc $(CFLAGS)  -I $(INCDIR) -o $(BINDIR)audioclient $(SRCDIR)audioclient.c $(BINDIR)packethelper.o $(BINDIR)audio.o
 
 
 # Clean the workspace
 clean:
-	rm audioserver audioclient
-
-
-# Test programs
-test:
-	./audioserver && ./audioclient
+	rm $(BINDIR)audioserver $(BINDIR)audioclient $(BINDIR)packethelper.o $(BINDIR)audio.o
