--- a/SYR2/Projet/Partie 2 - Streaming Audio/makefile
+++ b/SYR2/Projet/Partie 2 - Streaming Audio/makefile
@@ -6,10 +6,20 @@ INCDIR = includes/
 
 
 # Compilations
-all: $(SRCDIR)audioserver.c $(SRCDIR)audioclient.c $(SRCDIR)packethelper.c $(SRCDIR)audio.c
+all: $(BINDIR)audioserver $(BINDIR)audioclient
+
+
+# The components of the compilation
+$(BINDIR)audio.o: $(SRCDIR)audio.c $(INCDIR)audio.h
 	gcc $(CFLAGS)  -c -I $(INCDIR) -o $(BINDIR)audio.o $(SRCDIR)audio.c
+
+$(BINDIR)packethelper.o: $(SRCDIR)packethelper.c $(INCDIR)packethelper.h
 	gcc $(CFLAGS)  -c -I $(INCDIR) -o $(BINDIR)packethelper.o $(SRCDIR)packethelper.c
+
+$(BINDIR)audioserver: $(SRCDIR)audioserver.c $(INCDIR)clientserver.h $(BINDIR)audio.o $(BINDIR)packethelper.o
 	gcc $(CFLAGS)  -I $(INCDIR) -o $(BINDIR)audioserver $(SRCDIR)audioserver.c $(BINDIR)packethelper.o $(BINDIR)audio.o
+
+$(BINDIR)audioclient: $(SRCDIR)audioclient.c $(INCDIR)clientserver.h $(BINDIR)audio.o $(BINDIR)packethelper.o
 	gcc $(CFLAGS)  -I $(INCDIR) -o $(BINDIR)audioclient $(SRCDIR)audioclient.c $(BINDIR)packethelper.o $(BINDIR)audio.o
 
 
